upload/src/main/mp/parser/gen/MPParser.py
# Generated from /home/hungdao1311/Documents/PPL/assignment2/upload/src/main/mp/parser/MP.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MPParser ( Parser ):

    grammarFileName = "MP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'+'", "'-'", "'/'", "'*'", 
                     "'<>'", "'<'", "'<='", "'='", "'>'", "'>='", "'('", 
                     "')'", "'['", "']'", "';'", "'..'", "':'", "<INVALID>", 
                     "','" ]

    symbolicNames = [ "<INVALID>", "ANDTHEN", "ORELSE", "WITH", "BOOL_LIT", 
                      "BREAK", "CONTINUE", "FOR", "TO", "DOWNTO", "DO", 
                      "IF", "THEN", "ELSE", "RETURN", "WHILE", "BEGIN", 
                      "END", "FUNCTION", "PROCEDURE", "VAR", "TRUE", "FALSE", 
                      "ARRAY", "OF", "REAL", "BOOLEAN", "INTEGER", "STRING", 
                      "NOT", "AND", "OR", "DIV", "MOD", "PLUS", "MINUS", 
                      "DIVIDE", "MULTIPLE", "NOT_EQUAL", "LT", "LE", "EQUAL", 
                      "GT", "GE", "LB", "RB", "LSB", "RSB", "SM", "DOTDOT", 
                      "COLON", "ASSIGN", "CM", "STRING_LIT", "ILLEGAL_ESCAPE", 
                      "UNCLOSED_STRING", "ID", "WS", "COMMENT_1", "COMMENT_2", 
                      "LINE_COMMENT", "INT_LIT", "FLOAT_LIT", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decl = 1
    RULE_var_dec = 2
    RULE_var_dec_list = 3
    RULE_one_var_dec = 4
    RULE_id_list = 5
    RULE_main_type = 6
    RULE_primitive_type = 7
    RULE_array_dec = 8
    RULE_array_bound = 9
    RULE_func_dec = 10
    RULE_procedure_dec = 11
    RULE_exp_element = 12
    RULE_invo_exp = 13
    RULE_index_exp = 14
    RULE_exp_list = 15
    RULE_exp = 16
    RULE_exp1 = 17
    RULE_exp2 = 18
    RULE_exp3 = 19
    RULE_exp4 = 20
    RULE_exp5 = 21
    RULE_stmt = 22
    RULE_assign_stmt = 23
    RULE_lhs = 24
    RULE_assign_stmt1 = 25
    RULE_if_stmt = 26
    RULE_while_stmt = 27
    RULE_for_stmt = 28
    RULE_break_stmt = 29
    RULE_continue_stmt = 30
    RULE_return_stmt = 31
    RULE_compound_stmt = 32
    RULE_stmt_list = 33
    RULE_with_stmt = 34
    RULE_call_stmt = 35

    ruleNames =  [ "program", "decl", "var_dec", "var_dec_list", "one_var_dec", 
                   "id_list", "main_type", "primitive_type", "array_dec", 
                   "array_bound", "func_dec", "procedure_dec", "exp_element", 
                   "invo_exp", "index_exp", "exp_list", "exp", "exp1", "exp2", 
                   "exp3", "exp4", "exp5", "stmt", "assign_stmt", "lhs", 
                   "assign_stmt1", "if_stmt", "while_stmt", "for_stmt", 
                   "break_stmt", "continue_stmt", "return_stmt", "compound_stmt", 
                   "stmt_list", "with_stmt", "call_stmt" ]

    EOF = Token.EOF
    ANDTHEN=1
    ORELSE=2
    WITH=3
    BOOL_LIT=4
    BREAK=5
    CONTINUE=6
    FOR=7
    TO=8
    DOWNTO=9
    DO=10
    IF=11
    THEN=12
    ELSE=13
    RETURN=14
    WHILE=15
    BEGIN=16
    END=17
    FUNCTION=18
    PROCEDURE=19
    VAR=20
    TRUE=21
    FALSE=22
    ARRAY=23
    OF=24
    REAL=25
    BOOLEAN=26
    INTEGER=27
    STRING=28
    NOT=29
    AND=30
    OR=31
    DIV=32
    MOD=33
    PLUS=34
    MINUS=35
    DIVIDE=36
    MULTIPLE=37
    NOT_EQUAL=38
    LT=39
    LE=40
    EQUAL=41
    GT=42
    GE=43
    LB=44
    RB=45
    LSB=46
    RSB=47
    SM=48
    DOTDOT=49
    COLON=50
    ASSIGN=51
    CM=52
    STRING_LIT=53
    ILLEGAL_ESCAPE=54
    UNCLOSED_STRING=55
    ID=56
    WS=57
    COMMENT_1=58
    COMMENT_2=59
    LINE_COMMENT=60
    INT_LIT=61
    FLOAT_LIT=62
    ERROR_CHAR=63

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MPParser.EOF, 0)

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.DeclContext)
            else:
                return self.getTypedRuleContext(MPParser.DeclContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 72
                self.decl()
                self.state = 75 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.FUNCTION) | (1 << MPParser.PROCEDURE) | (1 << MPParser.VAR))) != 0)):
                    break

            self.state = 77
            self.match(MPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_dec(self):
            return self.getTypedRuleContext(MPParser.Var_decContext,0)


        def func_dec(self):
            return self.getTypedRuleContext(MPParser.Func_decContext,0)


        def procedure_dec(self):
            return self.getTypedRuleContext(MPParser.Procedure_decContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl" ):
                listener.enterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl" ):
                listener.exitDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MPParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.state = 82
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 79
                self.var_dec()
                pass
            elif token in [MPParser.FUNCTION]:
                self.enterOuterAlt(localctx, 2)
                self.state = 80
                self.func_dec()
                pass
            elif token in [MPParser.PROCEDURE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 81
                self.procedure_dec()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var_decContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MPParser.VAR, 0)

        def var_dec_list(self):
            return self.getTypedRuleContext(MPParser.Var_dec_listContext,0)


        def SM(self):
            return self.getToken(MPParser.SM, 0)

        def getRuleIndex(self):
            return MPParser.RULE_var_dec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_dec" ):
                listener.enterVar_dec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_dec" ):
                listener.exitVar_dec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_dec" ):
                return visitor.visitVar_dec(self)
            else:
                return visitor.visitChildren(self)




    def var_dec(self):

        localctx = MPParser.Var_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_dec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(MPParser.VAR)
            self.state = 85
            self.var_dec_list()
            self.state = 86
            self.match(MPParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var_dec_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def one_var_dec(self):
            return self.getTypedRuleContext(MPParser.One_var_decContext,0)


        def SM(self):
            return self.getToken(MPParser.SM, 0)

        def var_dec_list(self):
            return self.getTypedRuleContext(MPParser.Var_dec_listContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_var_dec_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_dec_list" ):
                listener.enterVar_dec_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_dec_list" ):
                listener.exitVar_dec_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_dec_list" ):
                return visitor.visitVar_dec_list(self)
            else:
                return visitor.visitChildren(self)




    def var_dec_list(self):

        localctx = MPParser.Var_dec_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var_dec_list)
        try:
            self.state = 93
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 88
                self.one_var_dec()
                self.state = 89
                self.match(MPParser.SM)
                self.state = 90
                self.var_dec_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.one_var_dec()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class One_var_decContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_list(self):
            return self.getTypedRuleContext(MPParser.Id_listContext,0)


        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def main_type(self):
            return self.getTypedRuleContext(MPParser.Main_typeContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_one_var_dec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOne_var_dec" ):
                listener.enterOne_var_dec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOne_var_dec" ):
                listener.exitOne_var_dec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOne_var_dec" ):
                return visitor.visitOne_var_dec(self)
            else:
                return visitor.visitChildren(self)




    def one_var_dec(self):

        localctx = MPParser.One_var_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_one_var_dec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.id_list()
            self.state = 96
            self.match(MPParser.COLON)
            self.state = 97
            self.main_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Id_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def CM(self):
            return self.getToken(MPParser.CM, 0)

        def id_list(self):
            return self.getTypedRuleContext(MPParser.Id_listContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_id_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId_list" ):
                listener.enterId_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId_list" ):
                listener.exitId_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId_list" ):
                return visitor.visitId_list(self)
            else:
                return visitor.visitChildren(self)




    def id_list(self):

        localctx = MPParser.Id_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_id_list)
        try:
            self.state = 103
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.match(MPParser.ID)
                self.state = 100
                self.match(MPParser.CM)
                self.state = 101
                self.id_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.match(MPParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Main_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_type(self):
            return self.getTypedRuleContext(MPParser.Primitive_typeContext,0)


        def array_dec(self):
            return self.getTypedRuleContext(MPParser.Array_decContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_main_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain_type" ):
                listener.enterMain_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain_type" ):
                listener.exitMain_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMain_type" ):
                return visitor.visitMain_type(self)
            else:
                return visitor.visitChildren(self)




    def main_type(self):

        localctx = MPParser.Main_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_main_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.REAL, MPParser.BOOLEAN, MPParser.INTEGER, MPParser.STRING]:
                self.state = 105
                self.primitive_type()
                pass
            elif token in [MPParser.ARRAY]:
                self.state = 106
                self.array_dec()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Primitive_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(MPParser.BOOLEAN, 0)

        def INTEGER(self):
            return self.getToken(MPParser.INTEGER, 0)

        def REAL(self):
            return self.getToken(MPParser.REAL, 0)

        def STRING(self):
            return self.getToken(MPParser.STRING, 0)

        def getRuleIndex(self):
            return MPParser.RULE_primitive_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimitive_type" ):
                listener.enterPrimitive_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimitive_type" ):
                listener.exitPrimitive_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimitive_type" ):
                return visitor.visitPrimitive_type(self)
            else:
                return visitor.visitChildren(self)




    def primitive_type(self):

        localctx = MPParser.Primitive_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_primitive_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.REAL) | (1 << MPParser.BOOLEAN) | (1 << MPParser.INTEGER) | (1 << MPParser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Array_decContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MPParser.ARRAY, 0)

        def LSB(self):
            return self.getToken(MPParser.LSB, 0)

        def array_bound(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.Array_boundContext)
            else:
                return self.getTypedRuleContext(MPParser.Array_boundContext,i)


        def DOTDOT(self):
            return self.getToken(MPParser.DOTDOT, 0)

        def RSB(self):
            return self.getToken(MPParser.RSB, 0)

        def OF(self):
            return self.getToken(MPParser.OF, 0)

        def primitive_type(self):
            return self.getTypedRuleContext(MPParser.Primitive_typeContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_array_dec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray_dec" ):
                listener.enterArray_dec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray_dec" ):
                listener.exitArray_dec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_dec" ):
                return visitor.visitArray_dec(self)
            else:
                return visitor.visitChildren(self)




    def array_dec(self):

        localctx = MPParser.Array_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_array_dec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(MPParser.ARRAY)
            self.state = 112
            self.match(MPParser.LSB)
            self.state = 113
            self.array_bound()
            self.state = 114
            self.match(MPParser.DOTDOT)
            self.state = 115
            self.array_bound()
            self.state = 116
            self.match(MPParser.RSB)
            self.state = 117
            self.match(MPParser.OF)
            self.state = 118
            self.primitive_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Array_boundContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_LIT(self):
            return self.getToken(MPParser.INT_LIT, 0)

        def MINUS(self):
            return self.getToken(MPParser.MINUS, 0)

        def getRuleIndex(self):
            return MPParser.RULE_array_bound

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray_bound" ):
                listener.enterArray_bound(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray_bound" ):
                listener.exitArray_bound(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_bound" ):
                return visitor.visitArray_bound(self)
            else:
                return visitor.visitChildren(self)




    def array_bound(self):

        localctx = MPParser.Array_boundContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_array_bound)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.MINUS:
                self.state = 120
                self.match(MPParser.MINUS)


            self.state = 123
            self.match(MPParser.INT_LIT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Func_decContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(MPParser.FUNCTION, 0)

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def main_type(self):
            return self.getTypedRuleContext(MPParser.Main_typeContext,0)


        def SM(self):
            return self.getToken(MPParser.SM, 0)

        def compound_stmt(self):
            return self.getTypedRuleContext(MPParser.Compound_stmtContext,0)


        def var_dec_list(self):
            return self.getTypedRuleContext(MPParser.Var_dec_listContext,0)


        def var_dec(self):
            return self.getTypedRuleContext(MPParser.Var_decContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_func_dec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_dec" ):
                listener.enterFunc_dec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_dec" ):
                listener.exitFunc_dec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_dec" ):
                return visitor.visitFunc_dec(self)
            else:
                return visitor.visitChildren(self)




    def func_dec(self):

        localctx = MPParser.Func_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_func_dec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(MPParser.FUNCTION)
            self.state = 126
            self.match(MPParser.ID)
            self.state = 127
            self.match(MPParser.LB)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.ID:
                self.state = 128
                self.var_dec_list()


            self.state = 131
            self.match(MPParser.RB)
            self.state = 132
            self.match(MPParser.COLON)
            self.state = 133
            self.main_type()
            self.state = 134
            self.match(MPParser.SM)
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.VAR:
                self.state = 135
                self.var_dec()


            self.state = 138
            self.compound_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Procedure_decContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCEDURE(self):
            return self.getToken(MPParser.PROCEDURE, 0)

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def SM(self):
            return self.getToken(MPParser.SM, 0)

        def compound_stmt(self):
            return self.getTypedRuleContext(MPParser.Compound_stmtContext,0)


        def var_dec_list(self):
            return self.getTypedRuleContext(MPParser.Var_dec_listContext,0)


        def var_dec(self):
            return self.getTypedRuleContext(MPParser.Var_decContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_procedure_dec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcedure_dec" ):
                listener.enterProcedure_dec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcedure_dec" ):
                listener.exitProcedure_dec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcedure_dec" ):
                return visitor.visitProcedure_dec(self)
            else:
                return visitor.visitChildren(self)




    def procedure_dec(self):

        localctx = MPParser.Procedure_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_procedure_dec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(MPParser.PROCEDURE)
            self.state = 141
            self.match(MPParser.ID)
            self.state = 142
            self.match(MPParser.LB)
            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.ID:
                self.state = 143
                self.var_dec_list()


            self.state = 146
            self.match(MPParser.RB)
            self.state = 147
            self.match(MPParser.SM)
            self.state = 149
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.VAR:
                self.state = 148
                self.var_dec()


            self.state = 151
            self.compound_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Exp_elementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING_LIT(self):
            return self.getToken(MPParser.STRING_LIT, 0)

        def INT_LIT(self):
            return self.getToken(MPParser.INT_LIT, 0)

        def FLOAT_LIT(self):
            return self.getToken(MPParser.FLOAT_LIT, 0)
